--- a/VERAPRO/SERVER/LEDAPRAVO/ledapravoSrv.dproj
+++ b/VERAPRO/SERVER/LEDAPRAVO/ledapravoSrv.dproj
@@ -111,13 +111,15 @@
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
         <DCCReference Include="..\COMMON\uRtcDmList.pas"/>
-        <DCCReference Include="..\..\COMPONENTS\FIBPROVIDER\fbdatabase.pas"/>
+        <DCCReference Include="..\..\COMPONENTS\FIBPROVIDER\fbapidatabase.pas"/>
         <DCCReference Include="..\COMMON\DmMain.pas">
             <Form>MainDm</Form>
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
         <DCCReference Include="..\..\..\LIB\SettingsStorage.pas"/>
+        <DCCReference Include="..\..\COMPONENTS\FIBPROVIDER\fbapitransaction.pas"/>
+        <DCCReference Include="..\..\COMPONENTS\FIBPROVIDER\fbapiquery.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
