--- a/VERAPRO/TEST/test.dproj
+++ b/VERAPRO/TEST/test.dproj
@@ -91,7 +91,7 @@
             <Form>Form5</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\COMPONENTS\FIBPROVIDER\fbdatabase.pas"/>
+        <DCCReference Include="..\COMPONENTS\FIBPROVIDER\fbapidatabase.pas"/>
         <DCCReference Include="..\COMPONENTS\FIBPROVIDER\FIbLib.pas"/>
         <DCCReference Include="..\COMPONENTS\FIBPROVIDER\fbresultset.pas"/>
         <DCCReference Include="..\COMPONENTS\DmFibApi.pas">
@@ -99,6 +99,9 @@
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="..\COMPONENTS\FIBPROVIDER\VkUIBDataset.pas"/>
+        <DCCReference Include="..\COMPONENTS\FIBPROVIDER\VkUib.pas"/>
+        <DCCReference Include="..\COMPONENTS\FIBPROVIDER\fbapitransaction.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
