--- a/VERAPRO/SERVER/LEDAPRAVO/ledapravoSrv.dproj
+++ b/VERAPRO/SERVER/LEDAPRAVO/ledapravoSrv.dproj
@@ -119,12 +119,19 @@
         </DCCReference>
         <DCCReference Include="..\..\..\LIB\SettingsStorage.pas"/>
         <DCCReference Include="..\..\COMPONENTS\FIBPROVIDER\fbapiquery.pas"/>
-        <DCCReference Include="..\COMMON\INTERFACE\ServerDocSqlManager.pas"/>
+        <DCCReference Include="..\COMMON\INTERFACE\ClientDocSqlManager.pas"/>
         <DCCReference Include="..\COMMON\DmRtcTable.pas">
             <Form>RtcTableDm</Form>
             <FormType>dfm</FormType>
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
+        <DCCReference Include="..\COMMON\DmSrvDoc.pas">
+            <Form>SrvDocDm</Form>
+            <FormType>dfm</FormType>
+            <DesignClass>TDataModule</DesignClass>
+        </DCCReference>
+        <DCCReference Include="..\COMMON\INTERFACE\SQLTableProperties.pas"/>
+        <DCCReference Include="..\COMMON\INTERFACE\ServerDocSqlManager.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
