--- a/VERAPRO/SERVER/LEDAPRAVO/ledapravoSrv.dproj
+++ b/VERAPRO/SERVER/LEDAPRAVO/ledapravoSrv.dproj
@@ -164,6 +164,9 @@
                 <Platform value="Win32">True</Platform>
                 <Platform value="Win64">False</Platform>
             </Platforms>
+            <UnitTesting>
+                <TestProjectName>D:\DELPHI_XE6\MyDelphi\VERAPRO\SERVER\LEDAPRAVO\Test\ledapravoSrvTests.dproj</TestProjectName>
+            </UnitTesting>
         </BorlandProject>
         <ProjectFileVersion>12</ProjectFileVersion>
     </ProjectExtensions>
