--- a/VERAPRO/JAVA/pom.xml
+++ b/VERAPRO/JAVA/pom.xml
@@ -227,7 +227,7 @@
 
             <dependency>
                 <groupId>org.firebirdsql.jdbc</groupId>
-                <artifactId>jaybird-jdk18</artifactId>
+                <artifactId>jaybird</artifactId>
                 <version>4.0.0.java8</version>
                 <!--exclusions>
                     <exclusion>
