--- a/VERAPRO/JAVA/pom.xml
+++ b/VERAPRO/JAVA/pom.xml
@@ -22,6 +22,7 @@
 
     <modules>
         <module>fbrest-war</module>
+        <module>verapro-war</module>
     </modules>
 
 
@@ -346,6 +347,11 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-joda</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-xml</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
 
