--- a/VERAPRO/JAVA/pom.xml
+++ b/VERAPRO/JAVA/pom.xml
@@ -293,23 +293,28 @@
             </dependency-->
 
             <!--Swagger-->
-            <dependency>
+            <!--dependency>
                 <groupId>com.wordnik</groupId>
                 <artifactId>swagger-jaxrs_2.10</artifactId>
                 <version>1.3.5</version>
-            </dependency>
+            </dependency-->
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
-                <version>2.8.0</version>
-                <exclusions>
+                <version>2.9.2</version>
+                <!--exclusions>
                     <exclusion>
                         <artifactId>guava</artifactId>
                         <groupId>com.google.guava</groupId>
                     </exclusion>
-                </exclusions>
+                </exclusions-->
             </dependency>
             <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+            <!--dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>2.8.0</version>
@@ -331,7 +336,7 @@
                 <groupId>com.google.guava</groupId>
                 <version>15.0</version>
                 <classifier>cdi1.0</classifier>
-            </dependency>
+            </dependency-->
 
             <!--JSON-->
             <dependency>
