--- a/VERAPRO/JAVA/verapro-war/pom.xml
+++ b/VERAPRO/JAVA/verapro-war/pom.xml
@@ -9,6 +9,13 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <scm>
+        <connection>scm:git:https://github.com/vkorshun/MyDelphi/tree/myDelphiJV/VERAPRO/JAVA</connection>
+        <developerConnection>scm:git:https://github.com/vkorshun/MyDelphi/tree/myDelphiJV/VERAPRO/JAVA</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/vkorshun/MyDelphi/tree/myDelphiJV/VERAPRO/JAVA</url>
+    </scm>
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>verapro-war</artifactId>
     <packaging>war</packaging>
@@ -25,12 +32,37 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>true</doUpdate>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
                     <warName>fbrest</warName>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Implementation-Build>${buildNumber}</Implementation-Build>
+                        </manifestEntries>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
