--- a/VERAPRO/JAVA/verapro-war/pom.xml
+++ b/VERAPRO/JAVA/verapro-war/pom.xml
@@ -45,7 +45,7 @@
                 </executions>
                 <configuration>
                     <doCheck>false</doCheck>
-                    <doUpdate>true</doUpdate>
+                    <doUpdate>false</doUpdate>
                 </configuration>
             </plugin>
             <plugin>
@@ -53,7 +53,7 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <warName>fbrest</warName>
+                    <warName>verapro</warName>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                     <archive>
                         <manifest>
